--- a/README.rdoc
+++ b/README.rdoc
@@ -41,6 +41,7 @@ configuration options in my vimrc are grouped by plugin.
 
 I've bundled following plugins:
 * <b>A</b> - alternate *.c and *.h files quickly.
+* <b>Ack</b> - front-end for Perl module App:Ack.
 * <b>Align</b> - easily align text.
 * <b>ApiDock</b> - search ApiDock for word under the cursor.
 * <b>C</b> - C/C++ IDE.
@@ -48,6 +49,7 @@ I've bundled following plugins:
 * <b>Command-T</b> - easily open files.
 * <b>Doxygen-Support</b> - support for writing doxygen.
 * <b>Fugitive</b> - git interface within Vim.
+* <b>Headlights</b> - TextMate's like 'bundle' menu.
 * <b>MatchIt</b> - extends the % key.
 * <b>NERD-Commenter</b> - easily comment (blocks of) code.
 * <b>NERD-Tree</b> - directory tree explorer.
