--- a/README.rdoc
+++ b/README.rdoc
@@ -1,7 +1,6 @@
 == Prerequisites
 * Vim 7.2 (not tested with other versions) compiled with ruby support
-* Ruby installed (to compile command-t)
-* Some gems like bluecloth or github-markup (probably only for vim-preview plugin)
+* Some plugins depends on some external programs/libraries. Please refer to plugins' documentation for more information.
 
 == Installation
 First of all you have to clone repository:
@@ -40,42 +39,42 @@ configuration options in my vimrc are grouped by plugin.
 == Plugins
 
 I've bundled following plugins:
-* <b>A</b> - alternate *.c and *.h files quickly.
-* <b>Ack</b> - front-end for Perl module App:Ack.
-* <b>Align</b> - easily align text.
-* <b>ApiDock</b> - search ApiDock for word under the cursor.
-* <b>C</b> - C/C++ IDE.
-* <b>Color-Pack</b> - many colorschemes to choose fro.
-* <b>Command-T</b> - easily open files.
-* <b>Doxygen-Support</b> - support for writing doxygen.
-* <b>Fugitive</b> - git interface within Vim.
-* <b>Headlights</b> - TextMate's like 'bundle' menu.
-* <b>MatchIt</b> - extends the % key.
-* <b>NERD-Commenter</b> - easily comment (blocks of) code.
-* <b>NERD-Tree</b> - directory tree explorer.
-* <b>Pastie</b> - paste code to Pastie from within Vim.
-* <b>Project</b> - organize and navigate project of files.
-* <b>Quickfix signs</b> - mark quickfix item with marks.
-* <b>Rails</b> - Ruby on Rails IDE.
-* <b>Repeat</b> - repeat the previous surrounding command.
-* <b>ShowMarks</b> - place and hide marks.
-* <b>Speeddating</b> - increment/decrement dates, times and more.
-* <b>Supertab</b> - autocomplete with Tab key.
-* <b>Surround</b> - find and edit surrounding parenthesis and so on.
-* <b>Syntastic</b> - check syntax when saving file.
-* <b>Taglist</b> - browse code's tags.
-* <b>Tasklist</b> - Eclipse like task list.
-* <b>TextObj-User</b> - support for user-defined text objects.
-* <b>TextObj-RubyBlock</b> - support for Ruby block test objects.
-* <b>Tlib</b> - library providing some utility functions.
-* <b>Tgpg</b> - edit encrypted files.
-* <b>Unimpaired</b> - several pairs of bracket mappings.
-* <b>Vim-Git</b> - Vim git runtime files.
-* <b>Vim-Preview</b> - easily preview markup files.
-* <b>Vim-RDoc</b> - adding RDoc syntax.
-* <b>Vim-RSpec</b> - run RSpecs from within Vim.
-* <b>Vim-Task</b> - getting things done in Vim.
-* <b>The Vim Outliner</b> - outliner for Vim.
-* <b>XPTemplate</b> - best code snippets.
-* <b>Yank Ring</b> - history of previous yanks.
+* <b>A[https://github.com/vim-scripts/a.vim]</b> - alternate *.c and *.h files quickly.
+* <b>Ack[https://github.com/mileszs/ack.vim]</b> - front-end for Perl module App:Ack.
+* <b>Align[https://github.com/vim-scripts/Align]</b> - easily align text.
+* <b>ApiDock[https://github.com/mileszs/apidock.vim]</b> - search ApiDock for word under the cursor.
+* <b>C[https://github.com/vim-scripts/c.vim]</b> - C/C++ IDE.
+* <b>Color-Sampler-Pack[https://github.com/vim-scripts/Color-Sampler-Pack]</b> - many colorschemes to choose fro.
+* <b>Command-T[https://github.com/wincent/Command-T]</b> - easily open files.
+* <b>Doxygen-Support[https://github.com/vim-scripts/doxygen-support.vim]</b> - support for writing doxygen.
+* <b>Fugitive[https://github.com/tpope/vim-fugitive]</b> - git interface within Vim.
+* <b>Headlights[https://github.com/mbadran/headlights]</b> - TextMate's like 'bundle' menu.
+* <b>MatchIt[https://github.com/vim-scripts/matchit.zip]</b> - extends the % key.
+* <b>NERD-Commenter[https://github.com/scrooloose/nerdcommenter]</b> - easily comment (blocks of) code.
+* <b>NERD-Tree[https://github.com/scrooloose/nerdtree]</b> - directory tree explorer.
+* <b>Pastie[https://github.com/tpope/vim-pastie]</b> - paste code to Pastie from within Vim.
+* <b>Project[https://github.com/vim-scripts/project.tar.gz]</b> - organize and navigate project of files.
+* <b>{Quickfix signs}[https://github.com/tomtom/quickfixsigns_vim]</b> - mark quickfix item with marks.
+* <b>Rails[https://github.com/tpope/vim-rails]</b> - Ruby on Rails IDE.
+* <b>Repeat[https://github.com/tpope/vim-repeat]</b> - repeat the previous surrounding command.
+* <b>ShowMarks[https://github.com/harleypig/ShowMarks]</b> - place and hide marks.
+* <b>Speeddating[https://github.com/tpope/vim-speeddating]</b> - increment/decrement dates, times and more.
+* <b>Supertab[https://github.com/ervandew/supertab]</b> - autocomplete with Tab key.
+* <b>Surround[https://github.com/tpope/vim-surround]</b> - find and edit surrounding parenthesis and so on.
+* <b>Syntastic[https://github.com/scrooloose/syntastic]</b> - check syntax when saving file.
+* <b>Taglist[https://github.com/mexpolk/vim-taglist]</b> - browse code's tags.
+* <b>Tasklist[https://github.com/vim-scripts/TaskList.vim]</b> - Eclipse like task list.
+* <b>TextObj-User[https://github.com/kana/vim-textobj-user]</b> - support for user-defined text objects.
+* <b>TextObj-RubyBlock[https://github.com/nelstrom/vim-textobj-rubyblock]</b> - support for Ruby block text objects.
+* <b>Tlib[https://github.com/tomtom/tlib_vim]</b> - library providing some utility functions.
+* <b>Tgpg[https://github.com/tomtom/tgpg_vim]</b> - edit encrypted files.
+* <b>Unimpaired[https://github.com/tpope/vim-unimpaired]</b> - several pairs of bracket mappings.
+* <b>Vim-Git[https://github.com/tpope/vim-git]</b> - Vim git runtime files.
+* <b>Vim-Preview[https://github.com/greyblake/vim-preview]</b> - easily preview markup files.
+* <b>Vim-RDoc[https://github.com/hallison/vim-rdoc]</b> - adding RDoc syntax.
+* <b>Vim-RSpec[https://github.com/taq/vim-rspec]</b> - run RSpecs from within Vim.
+* <b>Vim-Task[https://github.com/samsonw/vim-task]</b> - getting things done in Vim.
+* <b>{The Vim Outliner}[https://github.com/steeef/TVO--The-Vim-Outliner]</b> - outliner for Vim.
+* <b>XPTemplate[https://github.com/drmingdrmer/xptemplate-dist]</b> - best code snippets.
+* <b>{Yank Ring}[https://github.com/vim-scripts/YankRing.vim]</b> - history of previous yanks.
 
